# Agentic_Cloud_Benchmark

./: .gitignore  README.md  Test_result.txt  __init__.py  aiopslab_run_summary.md  cli.py  demo.py  doctor.py  evaluate.py  export.py  external.py  gpt.py  paths.py  pyproject.toml  runner.py  validate.py
.github/workflows/: pages.yml
acbench/: __init__.py  paths.py  scoring.py
acbench/agents/: __init__.py  anthropic_code.py  anthropic_common.py  anthropic_ops.py  azure_openai_code.py  azure_openai_ops.py  openai_code.py  (+4 more)
adapters/: swebench.py
agents/: openai_code.py  openai_ops.py
backends/: __init__.py
configs/: anthropic_direct.example.json  azure_openai_direct.example.json  openai_direct.example.json
docs/: ARCHITECTURE.md  COMMANDS.md  DEMO_GUIDE.md  ENVIRONMENT.md  OPENCLAW_ISSUE_CANDIDATES.md  PROTOTYPE_STATUS.md  QUICKSTART.md  SCENARIO_AUTHORING.md  STANDALONE_STATUS.md  TASK_BANK_REQUIREMENTS.md
executors/: local_code.py  standalone_code.py
manifests/: github_openclaw_extended.json  github_openclaw_smoke.json  local_code_suite.json  local_combined_suite.json  local_ops_suite.json  local_suite.json
models/: scenario.py
patches/: billing_pricing_bundle_fix.diff  feature_router_denylist_fix.diff  local_repo_easy_first_fix.diff  local_repo_hard_first_fix.diff  local_repo_medium_first_fix.diff  maintenance_window_overnight_fix.diff
predictions/: github_openclaw_extended_gold.json  github_openclaw_gold.json  local_gold.json
scripts/: run_agent_evals.py  run_anthropic_agent_evals.py  run_azure_openai_agent_evals.py  run_openai_agent_evals.py  update_leaderboard.py
standalone/: README.md  __init__.py
tasks/: README.md
tests/: test_agent_profile.py  test_anthropic_code_agent.py  test_anthropic_ops_agent.py  test_azure_openai_agent.py  test_cli.py  test_code_engine.py  test_code_runner.py  test_code_runtime.py  test_code_standalone.py  test_combined_local.py  test_demo.py  test_evaluate.py  test_local_code_executor.py  test_local_ops_executor.py  test_openai_code_agent.py  test_openai_ops_agent.py  test_ops_engine.py  test_ops_runner.py  test_ops_runtime.py  test_report.py  test_result_model.py  test_runner.py  test_standalone_code_executor.py  test_standalone_layout.py  test_swebench_adapter.py  test_swebench_contract.py  test_update_leaderboard.py
website/: index.html  main.js  styles.css
(+218 files in other folders)
