[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acbench-prototype"
version = "0.1.0"
description = "Standalone benchmark prototype for code-repair and ops evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
acbench = "acbench.orchestrator.cli:main"

[tool.setuptools]
packages = [
  "acbench",
  "acbench.agents",
  "acbench.evaluation",
  "acbench.executors",
  "acbench.executors.backends",
  "acbench.executors.backends.code",
  "acbench.executors.backends.ops",
  "acbench.models",
  "acbench.orchestrator",
  "acbench.services",
  "acbench.tasks",
]
